--- a/02-built-in-validation/index.html
+++ b/02-built-in-validation/index.html
@@ -5,8 +5,13 @@
 <title> Project 4 </title>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 <link href="main.css" rel="stylesheet">
-<script rc="main.html" async></script>
+<style>
 
+  #map {
+    height: 17%;
+    width: 100%;
+   }
+</style>
 </head>
 
 <body>
@@ -24,12 +29,30 @@
           </fieldset>
 
 
-          <input type="submit" onclick="" value="submit form" name="submit">
+          <input type="submit" onclick="https://github.com/sushant345/final/blob/master/02-built-in-validation/main.html" value="submit form" name="submit">
        </form>
 
     </main>
     <footer>
       <p> &copy; Sushant Jain 200393775</p>
+      h3>My Google Maps Demo</h3>
+
+      <div id="map"></div>
+      <script>
+
+  function initMap() {
+
+    var barrie = {lat: 44.3894, lng: 79.6903};
+
+    var map = new google.maps.Map(
+        document.getElementById('map'), {zoom: 4, center: barrie});
+
+    var marker = new google.maps.Marker({position: barrie, map: map});
+  }
+      </script>
+      <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPMu2B4uMQ-Ev_OH_o6MGBkpx3IIWuhPk&callback=initMap">
+      </script>
     </footer>
   </div>
 </body>
