--- a/02-built-in-validation/index.html
+++ b/02-built-in-validation/index.html
@@ -20,7 +20,7 @@
       <h1> Weird Deals Offer!! </h1>
     </header>
     <main>
-       <form action="" method="post">
+       <form action="main.html" method="post">
           <fieldset class="form-group">
              <input type="text" name="name" class="form-control" placeholder="Please enter your full name *" required>
                <input type="number" name="age" class="form-control" placeholder="Please enter your age *" required min="1" max="100">
@@ -29,7 +29,7 @@
           </fieldset>
 
 
-          <input type="submit" onclick="https://github.com/sushant345/final/blob/master/02-built-in-validation/main.html" value="submit form" name="submit">
+          <input type="submit"  value="submit form" name="submit">
        </form>
 
     </main>
