--- a/02-built-in-validation/index.html
+++ b/02-built-in-validation/index.html
@@ -35,7 +35,7 @@
     </main>
     <footer>
       <p> &copy; Sushant Jain 200393775</p>
-      h3>My Google Maps Demo</h3>
+      <h3>My Google Maps Demo</h3>
 
       <div id="map"></div>
       <script>
@@ -56,5 +56,5 @@
     </footer>
   </div>
 </body>
-<script src="validation.js"></script>
+<script> src="validation.js"></script>
 </html>
