--- a/02-built-in-validation/main.html
+++ b/02-built-in-validation/main.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Project 4 || Weird Deals</title>
-<script rc="main.js" async></script>
+<script src="main.js" async></script>
 </head>
 <body>
   <header>
